Proyecto2/k8s_essencials/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopes1-ingress
  namespace: sopes1
  labels:
    name: sopes1-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 34.56.128.79.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: go-client-service
                port:
                  number: 8080
            path: /Agronomia
          - pathType: Prefix
            backend:
              service:
                name: rust-client-service
                port:
                  number: 8081
            path: /Ingenieria
